# tanker

./: .gitignore  CLAUDE.md  README.md  USER-CHECKLIST.md  guidebook.html  install.sh  mkdocs.yml
.claude/: brain.md  settings.json.example  tanker.yaml
.claude/agents/: explore.md  github-scout.md  mvp-reviewer.md  prd-reviewer.md  pre-merge.md
.claude/hooks/: README.md  stop-auto-review.sh
.claude/rubrics/: pr-readiness.yaml  static-site.yaml
.claude/rules/: builder-ethos.md  claude-executes.md
.claude/skills/advisor/: SKILL.md
.claude/skills/analyst/: SKILL.md
.claude/skills/architect/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.launch/: README.md  devto-blog-post.md  email-template.md  morning-schedule.md  reddit-localllama.md  show-hn.md
docs/: faq.md
docs/architecture/: config.md  hosted.md  messages.md
docs/comparisons/: metagpt.md
examples/: README.md
examples/data-analysis/: brief.md
examples/saas-mvp/: transcript.md
outputs/: salary-estimator-plan.md
outputs/advisor/: visibl-prd-reviewed-by-sonnet-2026-04-23.md
outputs/benchmark/: geo-aeo-matrix.md
outputs/builder-ui/: index.html
projects/whoop-ai-trainer/: .env.example  README.md  pyproject.toml  requirements.txt
projects/whoop-ai-trainer/src/: main.py
projects/whoop-ai-trainer/src/agents/: __init__.py  base.py  dietitian.py  doctor.py  functional.py  master.py  sleep_coach.py  strength.py
projects/whoop-ai-trainer/src/storage/: cache.py
projects/whoop-ai-trainer/src/tools/: whoop_tools.py
projects/whoop-ai-trainer/src/whoop/: auth.py  client.py  models.py
(+36 files in other folders)
