[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "whoop-ai-trainer"
version = "0.1.0"
description = "AI fitness trainer powered by WHOOP biometric data and Claude"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
trainer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
